# bird-finder-app

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile_code  Dockerfile_dagster  Makefile  README.md  config.yaml  docker-compose.yaml  ebirdapi.py  pyproject.toml  staging.py  workspace.yaml
examples/: basic_usage.py
ingestion/: __init__.py  ebirdapi.py
ingestion/schemas/export/: ebirdapi_source.schema.yaml
ingestion/schemas/import/: ebirdapi_source.schema.yaml
orchestration/: __init__.py  setup.py
orchestration/assets/dbt/: __init__.py
orchestration/assets/ebirdapi/: config.yaml  ebirdapi.py
orchestration/assets/ebirdapi/schemas/export/: ebirdapi_source.schema.yaml
orchestration/orchestration/: assets.py  constants.py  definitions.py
orchestration/orchestration/schemas/import/: ebirdapi_source.schema.yaml
orchestration/tmpnyvpwaml/history/: runs.db
orchestration/tmpnyvpwaml/history/runs/: index.db
orchestration/tmpnyvpwaml/schedules/: schedules.db
schemas/export/: ebirdapi_source.schema.yaml
schemas/import/: ebirdapi_source.schema.yaml
scripts/: staging.py
src/bird_finder/: __init__.py
src/bird_finder/orchestration/: __init__.py
src/bird_finder/orchestration/assets/dbt/: __init__.py
src/bird_finder/orchestration/assets/ebirdapi/: ebirdapi.py
src/bird_finder/orchestration/utils/: __init__.py
src/bird_finder/scripts/: staging.py
src/bird_finder/transformation/: dbt_project.yml  profiles.yml
src/bird_finder/transformation/models/staging/: taxonomy.sql  taxonomy__com_name_codes.sql  taxonomy_versions.sql
src/bird_finder/transformation/models/staging/docs/: taxa_local_codes.yml  taxonomy.yml  taxonomy__banding_codes.yml
src/bird_finder/utils/: __init__.py
tests/: __init__.py  conftest.py
transformation/: .user.yml  dbt_project.yml  profiles.yml  schema.yaml
transformation/models/dimensions/: dlt_loads_info.sql
transformation/models/sources/ebirdapi/: source.yml
transformation/models/staging/: _dlt_loads.sql  _dlt_pipeline_state.sql  _dlt_version.sql  _load_info.sql  _load_info__load_packages.sql  _load_info__load_packages__jobs.sql  _load_info__load_packages__tables.sql  _load_info__load_packages__tables__columns.sql  _load_info__loads_ids.sql  _new_tables.sql  _new_tables__columns.sql  recent_observations.sql  taxa_local_codes.sql  taxonomy.sql  taxonomy__banding_codes.sql  taxonomy__com_name_codes.sql  taxonomy__sci_name_codes.sql  taxonomy_versions.sql
transformation/models/staging/docs/: _dlt_loads.yml  _dlt_pipeline_state.yml  _dlt_version.yml  _load_info.yml  _load_info__load_packages.yml  _load_info__load_packages__jobs.yml  _load_info__load_packages__tables.yml  _load_info__load_packages__tables__columns.yml  _load_info__loads_ids.yml  _new_tables.yml  _new_tables__columns.yml  recent_observations.yml  taxonomy__com_name_codes.yml  taxonomy__sci_name_codes.yml  taxonomy_versions.yml
